assets/css/style.css
body {
    margin: 0;
    width: 100%;
    height: 100%;
}

.headertext{
    text-align: center;
}

.background {
 background-image: url(../images/background.jpg);
 -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

/* Map settings */
.map-section {
  border-bottom: 1px solid #d0d0d0;
 
}

#map {
  min-height: 500px !important;
  
}

.input-boxes {
  width: 100%;
  line-height: 50px;
  font-size: 15px;
  margin-bottom: 25px;
  border-radius: 5px;
  
}

#country {
  height: 50px;
}

.find-header {
  font-family: "Exo", "sans-serif";
  font-size: 20px;
  font-weight: 500;
  margin-bottom: 5px;
  margin-top: 10px;
}

#reset-button {
  margin-bottom: 20px;
  margin-top: 10px;
  text-align: left;
}

.filter-column {
  height: 300px;
  

}

.radio-form {
  margin-left: 10px;
  margin-right: 30px;
  margin-top: 10px;
}

.radio-buttons {
  margin-left: 10px;
  margin-bottom: 5px;
  padding: 5px;
  font-family: "Roboto", "sans-serif";
  font-size: 15px;
}

/*Info box styling*/
table {
  font-size: 15px;
}

#listing {
  margin-right: 50px;
  margin-left: 50px;
  margin-bottom: 25px;
}

#resultsTable {
  border-collapse: collapse;
  width: 100%;
  
}

.iw_table_row {
  height: 18px;
}

.iw_attribute_name {
  font-weight: bold;
  text-align: right;
  
}

.iw_table_icon {
  text-align: right;
}

#About{
  display: block;
  padding: 6px 12px;
  border-top: none;

}

#Home{
display: block;
padding: 6px 12px;
border-top: none;
}

* {box-sizing:border-box}


/*-----------------------SEARCH FILTERS */

@media (min-width: 992px) {
    .lead-large {
    margin-top: 150px;
    }
}

.info-box {
    display: block;
}

#category, #autocomplete {
    border-radius: 25px;
    width: 100%;
    height: 40px;
    margin-bottom: 15px;
    color: #09191D;
    background-color: #FFFFFF;
    border: transparent;
    outline: none;
    text-align-last: center;
}

#locationField {
    margin-bottom: 15px;
    width: 100%;
}

.select-option {
    text-align: center;
}

input:focus::placeholder {
  color: transparent;
}

.btn-primary {
    display: block;
    margin: 0 auto;
    background-color: #FAED26;
    color: #09191D;
    border: transparent;
}

.btn:hover, .btn-primary:active {
    background-color: #FFFFFF;
    color: #09191D;
    border: transparent;
    transition: color 0.5s ease-in-out;
    -moz-transition: color 0.5s ease-in-out;
    -webkit-transition: color 0.5s ease-in-out;
    -o-transition: color 0.5s ease-in-out;
}

.btn:focus, .btn:active {
  outline: none;
  box-shadow: none; 
}

/*-----------------------MAP */

#map {
    margin-top: 200px;
    margin-bottom: 20px;
    width: 100%;
    height: 75vh;
    background: transparent;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
}

/*-----------------------RESULTS */

table {
    font-size: 1.3rem;
    width: 100%;
}

#listing {
    margin-left: 50px;
    margin-right: 50px;
}

#results {
    color: #000000;
}

#results-heading {
    color: rgb(255, 255, 255);
}




/*-----------------------FOOTER */

footer {
    margin-top: 20px;
    background: transparent;
    color: #ffffff;
}

.footer-text {
    color: #FFFFFF;
}

#footer-info {
    padding: 20px;
    text-align: left;
}

.icon-border a i {
    width: 32px;
    height: 32px;
    padding: 12px 0;
    border-radius: 50%;
    font-size: 15px;
    line-height: 7px;
    text-align: center;
    background: #FFFFFF;
    color: #09191D;
}

.icon-border i:hover {
    background: #FAED26;
    color: #09191D;
    transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -webkit-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
} 

.iw_table_row {
    font-size: 1.5rem;
    font-family: 'Fjalla One', sans-serif;
    color: #09191D;
}

